Fixed tab bug on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1603,14 +1603,25 @@ code {
 .tabs {
   border-bottom: 1px solid #c4d3df;
   line-height: 1;
-  height: 1.9rem;
 }
 .tabs .tab {
-  padding: 3rem 0 0.5rem 0;
+  padding: 0.5rem 0 0.5rem 1rem;
+  margin-bottom: 0.5rem;
   text-decoration: none;
-  border-bottom: 4px solid transparent;
-  margin-right: 1rem;
   color: #91a1ae;
+  border-left: 4px solid transparent;
+  display: block;
+  width: 100%;
+}
+@media screen and (min-width: 1280px) {
+  .tabs .tab {
+    padding: 0.5rem 0 0.5rem 0;
+    border-bottom: 4px solid transparent;
+    border-left: 0px none;
+    margin: 0 1rem 0 0;
+    display: inline-block;
+    width: auto;
+  }
 }
 .tabs .tab:hover {
   color: #52bdff;
