--- a/resources/scss/partials/tabs.scss
+++ b/resources/scss/partials/tabs.scss
@@ -1,14 +1,31 @@
 .tabs {
     border-bottom: 1px solid $neutral-30;
     line-height: 1;
-    height: 1.9rem;
+
+    @include min($screen-desktop) {
+        // height: 1.9rem;
+    }
 
     .tab {
-        padding: $spacing-12 0 $spacing-2 0;
+        padding: $spacing-2 0 $spacing-2 $spacing-4;
+        margin-bottom: $spacing-2;
         text-decoration: none;
-        border-bottom: 4px solid transparent;
-        margin-right: $spacing-4;
+
+
         color: $neutral-40;
+        border-left: 4px solid transparent;
+
+        display: block;
+        width: 100%;
+
+        @include min($screen-desktop) {
+            padding: $spacing-2 0 $spacing-2 0;
+            border-bottom: 4px solid transparent;
+            border-left: 0px none;
+            margin: 0 $spacing-4 0 0;
+            display: inline-block;
+            width: auto;
+        }
 
         &:hover {
             color: $primary-color-30;
